--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>基础程序</module>
         <module>BIO</module>
         <module>NIO</module>
+        <module>AIO</module>
     </modules>
 
     <dependencies>
